--- a/ProjectN5/recommendation_model.ipynb
+++ b/ProjectN5/recommendation_model.ipynb
@@ -39278,7 +39278,8 @@
     "id": "RBcZ9aBEGIhn"
    },
    "source": [
-    "path = '/Users/mikhailgoncharov/moskow-city-hack21'"
+    "path = '/Users/mikhailgoncharov/moskow-city-hack21/ProjectN5/database/'\n",
+    "path_google_drive = '/content/drive/MyDrive/ML model/'"
    ],
    "execution_count": 7,
    "outputs": []
@@ -39304,8 +39305,8 @@
     }
    },
    "source": [
-    "data = pd.read_csv(path + '/ProjectN5/database/skills_for_prediction_model.csv', usecols = ['id','name','skills'])\n",
-    "# data = pd.read_csv('/content/drive/MyDrive/ML model/skills_for_prediction_model.csv', usecols = ['id','name','skills'])"
+    "data = pd.read_csv(path + 'skills_for_prediction_model.csv', usecols = ['id','name','skills'])\n",
+    "# data = pd.read_csv(path_google_drive + 'skills_for_prediction_model.csv', usecols = ['id','name','skills'])"
    ],
    "execution_count": 8,
    "outputs": []
