--- a/ProjectN5/recommendation_model.ipynb
+++ b/ProjectN5/recommendation_model.ipynb
@@ -39228,7 +39228,8 @@
     "from catboost import CatBoostClassifier, Pool, cv, MetricVisualizer\n",
     "from sklearn.metrics import classification_report\n",
     "import re\n",
-    "import itertools"
+    "import itertools\n",
+    "from google.colab import drive"
    ],
    "execution_count": 6,
    "outputs": []
