--- a/ProjectN5/recommendation_model.ipynb
+++ b/ProjectN5/recommendation_model.ipynb
@@ -39280,7 +39280,7 @@
    },
    "source": [
     "path = '/Users/mikhailgoncharov/moskow-city-hack21/ProjectN5/database/'\n",
-    "path_google_drive = '/content/drive/MyDrive/ML model/'"
+    "path_google_drive = '/content/drive/MyDrive/ProjectN5/'"
    ],
    "execution_count": 7,
    "outputs": []
